[package]
name = "bm-starter-ns"
version = "0.1.0"
authors = ["Tron0xHEX <dm.fl.worker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
native-windows-gui = "1.0"
winapi = { version = "0.3", features = [
    "winbase",
    "memoryapi",
    "handleapi",
    "memoryapi",
    "processthreadsapi",
] }
anyhow = "1.0"
shared_memory = "0.12"
log = "0.4"
simplelog = "0.11"

[lib]
name = "loader"
crate-type = ["cdylib"]
